Do not use Flex in IE to avoid non-wrapping text #701

--- a/src/sass/_landing-page.scss
+++ b/src/sass/_landing-page.scss
@@ -61,9 +61,12 @@ $_page-gutter--wide: 3rem;
 .landing-page-calls-to-action {
   background-color: settings.$colour-component-background;
   padding: baseline.increments(5) $_page-gutter--narrow baseline.increments(3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  @supports (display: flex) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   @media screen and (min-width: $_image-visibility-breakpoint) {
     padding-left: $_page-gutter--wide;
